change image to link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="js/bootstrap.bundle.js"></script>
 </head>
 
@@ -29,11 +30,13 @@
                   <strong>HOME</strong>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">ABOUT</a></li>
+                  <li><a class="dropdown-item" href="#">ABOUT TLP</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">ADVOCACY</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">POSITION STATEMENT</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">LETTER FROM THE FOUNDER</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -41,13 +44,6 @@
                   aria-expanded="false">
                   <strong>APPLY TO FOSTER</TItle></strong>
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -55,11 +51,13 @@
                   <strong>ADOPT</strong>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">APPLY TO ADOPT</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">TLP DOGS FOR ADOPTION</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">IREHOME DOGS FOR ADOPTION</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">ADOPTION ALUMNI</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -68,11 +66,11 @@
                   <strong>IREHOME</strong>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">ABOUT IREHOME</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">IREHOME DOGS FOR ADOPTION</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">SUCCES STORIES</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -80,13 +78,6 @@
                   aria-expanded="false">
                   <strong>VOLUNTEER</strong>
                 </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -94,11 +85,17 @@
                   <strong>DONATE</strong>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">DONATE</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">DONATE SUPPLIES</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">BECOME A SPONSOR</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">GIVE AT WORK</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">SWEET PEA SOCIETY</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">TLP LEGAL SOCIETY</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -107,11 +104,13 @@
                   <strong>MORE...</strong>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">EVENTS</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">SHOP</a></li>
                   <hr>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">BLOG</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="#">PRIVACY</a></li>
                 </ul>
               </li>
             </ul>
@@ -152,9 +151,90 @@
     </div>
     <div class="part3">
       <h1>DONATE NOW AND SAVE A LIFE</h1>
-      <P>If you would like to send a cash or check donation, please mail to<br>The Love Pit<br>PO BOX 190472<br>Dallas, Texas 75219</P>
-      <div class="part3i"></div>
+      <P>If you would like to send a cash or check donation, please mail to<br>The Love Pit<br>PO BOX
+        190472<br>Dallas, Texas 75219
+      </P>
+      <div class="part3i">
+        <h4>Donate Now</h4><br>
+        <p>Choose Your Donation Frequency</p>
+        <div class="package-btn">
+          <button>One Time</button>
+          <button>Monthly</button>
+          <button>Quarterly</button>
+          <button>Annually</button>
+        </div><br>
+        <p>Choose a Donation Level</p>
+        <div class="money-btn">
+          <button>$25</button>
+          <button>$50</button>
+          <button>$100</button>
+          <button>$250</button>
+          <button>$500</button>
+          <button>$1000</button>
+        </div>
+        <input type="text" class="input-box" placeholder="Select an amount.">
+        <p>Or enter your own amount:</p>
+        <div class="money-input">
+          <input type="text" placeholder="0"><button>continue</button>
+        </div>
+      </div>
     </div>
+    <div class="adopt">
+      <img src="images/5_2.jpg" alt="">
+      <img src="images/6_2.jpg" alt="">
+      <img src="images/7_2.jpg" alt=""><br>
+      <img src="images/8_2.jpg" alt="">
+      <img src="images/9_2.jpg" alt="">
+      <img src="images/10_2.jpg" alt=""><br>
+      <button class="adopt-btn">ADOPT A DOG</button>
+    </div>
+    <div class="num-div">
+      <div class="pit-lives">
+        <h1>1260</h1><br>
+        <p>Pit Bull Lives Saved</p>
+      </div>
+      <div class="adoptions">
+        <h1>117</h1><br>
+        <p>Adoptions in 2022</p>
+      </div>
+      <div class="custody">
+        <h1>51</h1><br>
+        <p>Dogs In TLP Custody</p>
+      </div>
+    </div>
+    <div class="testimonies">
+      <div class="stories">
+        <div class="testimony">
+          <h1>WE ADOPTED BRAD<br>PIT</h1>
+          <p>Fate brought me to this rescue, to make a long<br>short I'm sleeping next to the newest<br>member of our
+            fur family. It's the best feeling<br>ever, we adopted Brad Pit.</p><h5>- Carla M.</h5>
+        </div>
+        <div class="testimony">
+          <h1>WONDERFUL<br>RESCUE!</h1>
+          <p>Wonderful rescue made up of wonderful people<br>who work *SO* hard to save the lives of sweet<br>pups and
+            to ensure they are placed in good<br>homes with loving families!</p><h5>- Chelsea B</h5>
+        </div>
+      </div>
+      <div class="stories2">
+        <div class="testimony">
+          <h1>FIVE STARS</h1>
+          <p>Definitely the upper echelon of rescue<br>organizations.</p><h5>- Lori G</h5>
+        </div>
+        <div class="testimony">
+          <h1>BEST RESCUE EVER</h1>
+          <p>Best rescue ever. We went to the meet and<br>greet last night—really good foster homes great<br>environment
+          </p><h5>- Luke J.</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="ending">
+    <div class="end">
+    <img src="images/00.png" alt="">
+    <div class="END1"><p>FIND US ON FACEBOOK</p><a href="https://www.facebook.com/1414577042118178"><i class="fa-brands fa-facebook fa-4x"></i></a></div>
+    <div class="END2"><p>FOLLOW US ON INSTAGRAM</p><a href="https://www.instagram.com/thelovepit/?utm_source=ig_embed&ig_rid=38110698-a8c5-4faf-9d41-a6682d00b3be"><i class="fa-brands fa-instagram fa-4x"></i></a></div>
+  </div>
+    © The Love Pit Rescue, EIN: 47-5439776. All rights reserved.
   </div>
 </body>
 
