--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
     <div class="END1"><p>FIND US ON FACEBOOK</p><a href="https://www.facebook.com/1414577042118178"><i class="fa-brands fa-facebook fa-4x"></i></a></div>
     <div class="END2"><p>FOLLOW US ON INSTAGRAM</p><a href="https://www.instagram.com/thelovepit/?utm_source=ig_embed&ig_rid=38110698-a8c5-4faf-9d41-a6682d00b3be"><i class="fa-brands fa-instagram fa-4x"></i></a></div>
   </div>
+  <div class="footer">
     © The Love Pit Rescue, EIN: 47-5439776. All rights reserved.
+  </div>
   </div>
 </body>
 
